@@ -14,41 +14,60 @@
 #++
 
 
-module WWW #:nodoc:
+require 'www/delicious/element'
+
+
+module WWW
   class Delicious
 
-    class Bundle
+    #
+    # = Delicious Bundle
+    # 
+    # Represents a single Bundle element.
+    #
+    class Bundle < Element
       
-      # The name of the bundle
+      # The name of the bundle.
       attr_accessor :name
       
-      # The collection of <tt>WWW::Delicious::Tags</tt>
+      # The collection of <tt>WWW::Delicious::Tags</tt>.
       attr_accessor :tags
       
-      public
-      #
-      # Creates a new <tt>WWW::Delicious::Bundle</tt> with given +name+
-      # and adds given array of +tags+ to current tags collection.
-      #
-      def initialize(name, tags = [], &block) #  :yields: bundle
-        raise ArgumentError, '`tags` expected to be an Array' unless tags.kind_of?(Array)
-        
-        self.name = name.to_s()
-        self.tags = tags
-        yield(self) if block_given?
-        self
+      
+      # Returns value for <tt>name</tt> attribute.
+      # Value is always normalized as lower string.
+      def name
+        @name.to_s.strip unless @name.nil?
       end
       
-      public
       #
-      # Creates a new <tt>WWW::Delicious::Bundle</tt> from a REXML fragment.
+      # Returns a string representation of this Bundle.
+      # In case name is nil this method will return an empty string.
       #
-      def self.from_rexml(element)
-        return new(element.if_attribute_value(:name) { |v| v.to_s() },
-                   element.if_attribute_value(:tags) { |v| v.to_s().split(' ') })
+      def to_s
+        name.to_s
       end
       
+      
+      class << self
+
+        # 
+        # Creates and returns new instance from a REXML +element+.
+        # 
+        # Implements Element#from_rexml.
+        # 
+        def from_rexml(element)
+          raise ArgumentError, "`element` expected to be a `REXML::Element`" unless element.kind_of? REXML::Element
+          self.new do |instance|
+            instance.name  = element.if_attribute_value(:name)
+            # FIXME: value must be converted to array of Tag
+            instance.tags  = element.if_attribute_value(:tags) { |value| value.split(' ') }
+          end
+        end
+
+      end
+
     end
-    
+
   end
 end
